// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetSimplifiedCommitsResponseDTO should match snapshot using commit.author.date 1`] = `
GetSimplifiedCommitsResponseDTO {
  "author": Object {
    "avatar_url": undefined,
    "id": undefined,
    "login": undefined,
    "url": undefined,
  },
  "committer": Object {
    "avatar_url": undefined,
    "id": undefined,
    "login": undefined,
    "url": undefined,
  },
  "date": 2021-11-07T05:00:00.000Z,
  "message": "test message",
  "sha": "sha",
  "url": "https://test.com",
}
`;

exports[`GetSimplifiedCommitsResponseDTO should match snapshot using commit.commiter.date 1`] = `
GetSimplifiedCommitsResponseDTO {
  "author": Object {
    "avatar_url": undefined,
    "id": undefined,
    "login": undefined,
    "url": undefined,
  },
  "committer": Object {
    "avatar_url": undefined,
    "id": undefined,
    "login": undefined,
    "url": undefined,
  },
  "date": 2022-11-07T05:00:00.000Z,
  "message": "test message",
  "sha": "sha",
  "url": "https://test.com",
}
`;
